--- a/webdeveloper-portfolio/index.html
+++ b/webdeveloper-portfolio/index.html
@@ -14,15 +14,29 @@
     <link rel="stylesheet" href="styles/portfolio.css" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <nav>
-        <h3 class="nav-tittle">Fa<span class="text-orange-color">r</span>zana Hossain</h3>
+        <h3 class="nav-tittle">Fa<span class="text-orange-color">r</span>zana </h3>
         <ul>
           <li><a href="">Portfolio</a></li>
           <li><a href="">Blog</a></li>
           <li><button class="btn-primary">Hire Me</button></li>
         </ul>
       </nav>
+
+
+      <div class="banner">
+        <div>
+            <h3 class="banner-greeting">Hi, I  am</h3>
+            <h2 class="banner-tittle">Farzana Hossain</h2>
+            <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+
+            <button class="btn-primary">Donwnload CV</button>
+            <button class="btn-primary">Contact</button>
+        </div>
+
+        <img class="profile-pic" src="images/hardy.png" alt="">
+      </div>
     </header>
     <main></main>
 
