--- a/webdeveloper-portfolio/index.html
+++ b/webdeveloper-portfolio/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="styles/portfolio.css" />
   </head>
   <body>
+
+    <!-- header starts -->
     <header class="header">
       <nav>
         <h3 class="nav-tittle">Fa<span class="text-orange-color">r</span>zana </h3>
@@ -26,10 +28,10 @@
 
 
       <div class="banner">
-        <div>
+        <div class="banner-content">
             <h3 class="banner-greeting">Hi, I  am</h3>
             <h2 class="banner-tittle">Farzana Hossain</h2>
-            <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+            <p class="banner-decription">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
 
             <button class="btn-primary">Donwnload CV</button>
             <button class="btn-primary">Contact</button>
@@ -38,7 +40,20 @@
         <img class="profile-pic" src="images/hardy.png" alt="">
       </div>
     </header>
-    <main></main>
+    <!-- header ends -->
+
+    <!-- main starts -->
+    <main>
+
+        <!-- about starts -->
+
+        <section class="about primary-pink-color">
+            <h3 class="section-tittle">About Me</h3>
+            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+        </section>
+    </main>
+
+    <!-- main ends -->
 
     <footer></footer>
   </body>
