--- a/webdeveloper-portfolio/index.html
+++ b/webdeveloper-portfolio/index.html
@@ -4,21 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Developer Portfolio</title>
-    
-    
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap"
+      rel="stylesheet"
+    />
 
     <link rel="stylesheet" href="styles/portfolio.css" />
   </head>
   <body>
-
     <!-- header starts -->
     <header class="header">
       <nav>
-        <h3 class="nav-tittle">Fa<span class="text-orange-color">r</span>zana </h3>
+        <h3 class="nav-tittle">
+          Fa<span class="text-orange-color">r</span>zana
+        </h3>
         <ul>
           <li><a href="">Portfolio</a></li>
           <li><a href="">Blog</a></li>
@@ -26,31 +28,207 @@
         </ul>
       </nav>
 
-
       <div class="banner">
         <div class="banner-content">
-            <h3 class="banner-greeting">Hi, I  am</h3>
-            <h2 class="banner-tittle">Farzana Hossain</h2>
-            <p class="banner-decription">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+          <h3 class="banner-greeting">Hi, I am</h3>
+          <h2 class="banner-tittle">Farzana Hossain</h2>
+          <p class="banner-decription">
+            Shot what able cold new see hold.Friendly as an betrayed formerly
+            he. Morning because as to society behaved moments.
+          </p>
 
-            <button class="btn-primary">Donwnload CV</button>
-            <button class="btn-primary">Contact</button>
+          <button class="btn-primary">Donwnload CV</button>
+          <button class="btn-primary">Contact</button>
         </div>
 
-        <img class="profile-pic" src="images/hardy.png" alt="">
+        <img class="profile-pic" src="images/hardy.png" alt="" />
       </div>
     </header>
     <!-- header ends -->
 
     <!-- main starts -->
     <main>
+      <!-- about starts -->
+      <section class="about primary-pink-color">
+        <h3 class="section-tittle">About Me</h3>
+        <p class="section-description">
+          I, m a designer & developer with a passion for web design. I enjoy
+          developing simple, clean and slick websites that provide real value to
+          the end user. Thousands of clients have procured exceptional resulfs
+          while working with me. Delivering work within time and budget which
+          meets clients requirements in our mata.
+        </p>
 
-        <!-- about starts -->
+        <div class="about-info-container">
+          <div class="about-info">
+            <h4 class="info-tittle">Name:</h4>
+            <p class="info-description">Farzana Hossain</p>
+          </div>
+          <div class="about-info">
+            <h4 class="info-tittle">Email</h4>
+            <p class="info-description">Farzana.hoosain@gmail.com</p>
+          </div>
+          <div class="about-info">
+            <h4 class="info-tittle">Date of birth:</h4>
+            <p class="info-description">11 oct 1995</p>
+          </div>
+          <div class="about-info">
+            <h4 class="info-tittle">From:</h4>
+            <p class="info-description">Finland</p>
+          </div>
+        </div>
+      </section>
+      <!-- about ends -->
 
-        <section class="about primary-pink-color">
-            <h3 class="section-tittle">About Me</h3>
-            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
-        </section>
+      <!-- what i do starts -->
+      <section class="what-do">
+        <h3 class="section-tittle">What I do</h3>
+        <p id="do-description" class="section-description">
+          I have more than 10 years experience building software for clients all
+          over the world. Below is a quick overview of my main technical skill
+          sets and technologies i use. Want to find out more about my
+          experience? Check out my online resume and project portfolio.
+        </p>
+
+        <div class="skills-container">
+          <div class="skill">
+            <img src="images/icons/js.png" alt="" />
+            <h3 class="skill-tittle">Vanilla JavaScript</h3>
+            <p class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill">
+            <img src="images/icons/react.png" alt="" />
+            <h3 class="skill-tittle">React</h3>
+            <p class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill">
+            <img src="images/icons/nodejs.png" alt="" />
+            <h3 class="skill-tittle">Node.js</h3>
+            <p class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill">
+            <img src="images/icons/mongo.png" alt="" />
+            <h3 class="skill-tittle">MongoDB</h3>
+            <p class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+        </div>
+      </section>
+      <!-- what i do end -->
+
+      <!-- A summary of My Resume starts -->
+      <section class="resume">
+        <h3 class="section-tittle">A summary of My Resume</h3>
+
+        <div class="resume-container">
+          <!-- My Education -->
+          <div class="resume-column">
+            <h3 class="resume-column-tittle">My Education</h3>
+
+            <div class="resume-information">
+              <h2 class="resume-info-tittle">Master in Computer Engineering</h2>
+              <h3 class="resume-info-subtittle">
+                Harvard University / 2015 - 2017
+              </h3>
+              <p class="resume-info-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+
+            <hr />
+
+            <div class="resume-information">
+              <h2 class="resume-info-tittle">Master in Computer Engineering</h2>
+              <h3 class="resume-info-subtittle">
+                Harvard University / 2015 - 2017
+              </h3>
+              <p class="resume-info-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+
+            <hr />
+
+            <div class="resume-information">
+              <h2 class="resume-info-tittle">Master in Computer Engineering</h2>
+              <h3 class="resume-info-subtittle">
+                Harvard University / 2015 - 2017
+              </h3>
+              <p class="resume-info-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+          </div>
+
+          <!-- My Experience -->
+          <div class="resume-column">
+            <h3 class="resume-column-tittle">My Experience</h3>
+
+            <div class="resume-information">
+              <h2 class="resume-info-tittle">Master in Computer Engineering</h2>
+              <h3 class="resume-info-subtittle">
+                Harvard University / 2015 - 2017
+              </h3>
+              <p class="resume-info-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr class="hr-color" />
+            <div class="resume-information">
+              <h2 class="resume-info-tittle">Master in Computer Engineering</h2>
+              <h3 class="resume-info-subtittle">
+                Harvard University / 2015 - 2017
+              </h3>
+              <p class="resume-info-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+            <div class="resume-information">
+              <h2 class="resume-info-tittle">Master in Computer Engineering</h2>
+              <h3 class="resume-info-subtittle">
+                Harvard University / 2015 - 2017
+              </h3>
+              <p class="resume-info-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="download-cv">
+            <button class="btn-primary">Download CV</button>
+        </div>
+      </section>
+      <!-- A summary of My Resume ENDS -->
     </main>
 
     <!-- main ends -->
