--- a/webdeveloper-portfolio/index.html
+++ b/webdeveloper-portfolio/index.html
@@ -13,6 +13,8 @@
     />
 
     <link rel="stylesheet" href="styles/portfolio.css" />
+
+    <script src="https://kit.fontawesome.com/bef86603c0.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <!-- header starts -->
@@ -37,8 +39,8 @@
             he. Morning because as to society behaved moments.
           </p>
 
-          <button class="btn-primary">Donwnload CV</button>
-          <button class="btn-primary">Contact</button>
+          <button class="btn-primary"><i class="fa-solid fa-download"></i> Donwnload CV</button>
+          <button class="btn-primary"> <i class="fa-solid fa-phone"></i> Contact</button>
         </div>
 
         <img class="profile-pic" src="images/hardy.png" alt="" />
